# NUCLEUS

./: .gitignore  AGENTS.md  README.md  convert.py  pyproject.toml  setup.py
.github/workflows/: main.yml  unit-test-action.yaml
bench/: attention.py  block_flop_profile.py  inference_scaling.py  model_size_exp.py  nucleus_ablations.py  problem_size_exp.py
bubbleformer/: modules.py  test.py
bubbleformer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bubbleformer/config/: default.yaml
bubbleformer/config/data_cfg/: bubbleml_subcooled.yaml  poolboiling.yaml  poolboiling64.yaml  poolboiling_combined.yaml  poolboiling_subcooled.yaml
bubbleformer/config/model_cfg/: avit_spatial_small.yaml  neighbor_moe1.yaml  neighbor_moe_fluid_embed1.yaml  neighbor_moe_small.yaml  neighbor_vit1.yaml  neighbor_vit_small.yaml  vit_moe1.yaml  vit_small.yaml
bubbleformer/config/normalizer_cfg/: simple.yaml
bubbleformer/config/optim_cfg/: adamw.yaml
bubbleformer/config/scheduler_cfg/: cosine_warmup.yaml
bubbleformer/data/: batching.py  dataset.py  downsampled_dataset.py  normalize.py
bubbleformer/layers/: __init__.py  attention.py  fluid_param_embedding.py  patching.py  space_time_attention.py  space_time_block.py  transformer_block.py
bubbleformer/layers/attention/: neighborhood_attention.py  spatial_neighborhood_attention.py  temporal_attention.py
bubbleformer/layers/moe/: topk_moe.py
bubbleformer/models/: __init__.py  axial_vit.py  bubbleformer_vit.py  moe.py  neighbor_moe.py  neighbor_moe_fluid_embed.py  neighbor_vit.py  unets.py  vit.py
bubbleformer/models/tests/: test_get_model.py
bubbleformer/utils/: physical_metrics.py  plot_utils.py  set_fp32_precision.py
config/: default.yaml  moe_dpot.yaml  poseidon.yaml
config/data_cfg/: flowboiling_chf.yaml  flowboiling_velscale.yaml  poolboiling.yaml  poolboiling64.yaml  poolboiling64_gravity.yaml  poolboiling64_op250.yaml  poolboiling_gravity.yaml
config/model_cfg/: axial_moe1.yaml  axial_vit1.yaml  bubbleformer_film_vit_big.yaml  bubbleformer_film_vit_small.yaml  moe_dpot.yaml  poseidon_big.yaml  vit1.yaml
config/model_cfg/baseline/: bubbleformer_film_vit_big.yaml  bubbleformer_film_vit_small.yaml  poseidon_big.yaml  unet_modern.yaml
config/model_cfg/neighbor_moe/: neighbor_moe1.yaml  neighbor_moe4.yaml  neighbor_moe_exp.yaml
config/model_cfg/neighbor_vit/: neighbor_vit1.yaml  neighbor_vit2.yaml  neighbor_vit3.yaml  neighbor_vit4.yaml  neighbor_vit5.yaml  neighbor_vit6.yaml  neighbor_vit7.yaml  neighbor_vit8.yaml
config/model_cfg/nucleus1/: nucleus1.yaml
config/model_cfg/nucleus1/ablation/axial_moe/: axial_moe3.yaml  axial_moe6.yaml  axial_moe7.yaml
config/model_cfg/nucleus1/ablation/axial_vit/: axial_vit5.yaml  axial_vit6.yaml  axial_vit7.yaml  axial_vit8.yaml
config/model_cfg/nucleus1/ablation/neighbor_vit/: neighbor_vit8.yaml
config/model_cfg/nucleus1/ablation/spatial_moe/: spatial_moe7.yaml
config/model_cfg/nucleus1/ablation/spatial_vit/: spatial_vit8.yaml
config/model_cfg/nucleus2/: nucleus2_experiment.yaml  nucleus2_pushforward.yaml
config/model_cfg/spatial_moe/: spatial_moe6.yaml  spatial_moe7.yaml
config/model_cfg/spatial_neighbor_moe/: neighbor_moe2.yaml  neighbor_moe3.yaml  neighbor_moe5.yaml  neighbor_moe6.yaml  neighbor_moe7.yaml
config/model_cfg/spatial_vit/: spatial_vit5.yaml  spatial_vit7.yaml
config/normalizer_cfg/: gravity_std.yaml  no.yaml  standard.yaml
config/optim_cfg/: adam.yaml  adamw.yaml  lion.yaml  muon.yaml
config/scheduler_cfg/: cosine.yaml  cosine_warmup.yaml  trapezoidal.yaml
env/: requirements.txt
scripts/: check_data_distribution.py  flashx_util.py  inf.py  inf_one_step.py  inference.py  inference_autoregressive.ipynb  sdf_reinit_test.py  train.py  viz_attention_probs.py
slurm-hpc3/: submit_bubbleformer_train.sh  submit_moe_dpot_train.sh  submit_nucleus_exp.sh  submit_poseidon_train.sh
src/nucleus/: modules.py  run_forward_trajectory.py  test.py  test_one_step.py
src/nucleus/baseline/: moe_dpot.py  poseidon.py
src/nucleus/data/: __init__.py  batching.py  dataset.py  forecast_dataset.py  in_mem_dataset.py  in_mem_forecast_dataset.py  layout.py  normalize.py  pushforward_dataset.py
src/nucleus/data/tests/: test_dataset.py
src/nucleus/layers/: __init__.py  adaptive_layernorm.py  conv_layers.py  droppath.py  mlp.py  nucleus1_transformer_block.py  positional_encoding.py  space_time_attention.py  transformer_block.py
src/nucleus/layers/attention/: __init__.py  bubbleformer_attention.py  neighborhood_attention.py  spatial_attention.py  spatial_axial_attention.py  spatial_neighborhood_attention.py  temporal_attention.py
src/nucleus/layers/moe/: histogram.py  nucleus1_topk_moe.py  topk_moe.py
src/nucleus/layers/tests/: test_patching.py
src/nucleus/models/: __init__.py  _api.py  bubbleformer_vit.py  moe.py  nucleus1_moe.py  nucleus1_vit.py  nucleus2_moe.py  unets.py  vit.py
src/nucleus/models/tests/: test_get_model.py
src/nucleus/plot/: metrics.py  plot_metrics.py  plot_moe.py  plot_one_step.py  plot_op250.py  plot_rollout.py  plot_sdf_reinit.py  plotting.py
src/nucleus/testing/: parametrize.py
src/nucleus/utils/: heatflux.py  interp.py  losses.py  lr_schedulers.py  moe_metrics.py  normalize.py  parameter_count.py  physical_metrics.py  sdf_reinit.py  set_fp32_precision.py
test/: test_run_forward_trajectory.py  test_sdf_reinit.py
test/baseline/: test_moe_dpot.py  test_poseidon.py
test/config/: test_default.py  test_model_cfg.py
test/data/: test_forecast_dataset.py  test_layout.py
test/model/: test_bubbleformer.py  test_get_model.py  test_neighbor_moe.py  test_nucleus1.py  test_nucleus2.py
