[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nucleus"
version = "0.0.0"
description = ""
authors = [
    { name="Arthur Feeney", email="afeeney@uci.edu" },
    { name="Sheikh Md Shakeel Hassan", email="sheikhh1@umd.edu" },
    { name="Xianwei Zou", email="xianwz2@uci.edu" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch==2.10.0",
    "torchvision",
    "h5py",
    "hydra-core",
    "lightning",
    "wandb",
    "timm",
    "einops",
    "opencv-python",
    "matplotlib",
    "lightning",
    "wandb",
    "black",
    "lion-pytorch",
    "rich",
    "scipy",
    "scikit-image",
    "seaborn",
    "joblib",
    "rotary-embedding-torch",
    "imgcat",
    "pytest"
]

[tool.uv.sources]
torch = [
  # For developing on macos, need cpu torch
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "natten"
url = "https://whl.natten.org"
explicit = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'