[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nucleus"
version = "0.0.0"
description = ""
authors = [
    { name="Arthur Feeney", email="afeeney@uci.edu" },
    { name="Sheikh Md Shakeel Hassan", email="sheikhh1@umd.edu" },
    { name="Xianwei Zou", email="xianwz2@uci.edu" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "h5py",
    "hydra-core",
    "lightning",
    "wandb",
    "timm",
    "einops",
    "opencv-python",
    "matplotlib",
    "lightning",
    "wandb",
    "black",
    "lion-pytorch",
    "rich",
    "scipy",
    "scikit-image",
    "seaborn",
    "joblib",
    "rotary-embedding-torch",
    "imgcat",
    "pytest",
]

[project.optional-dependencies]
cpu = [
    "torch==2.10.0",
    "torchvision",
    "natten"
]
cu128 = [
    "torch==2.10.0",
    "torchvision",
]
poseidon = [
    # Poseidon relies on a swinv2 module that breaks with newer versions of Transformers.
    # This is the version that is listed in their pyproject.toml
    # https://github.com/camlab-ethz/poseidon/blob/b8fa28f59bd7f7673323f28d11a12c6f3a215c61/pyproject.toml
    "transformers==4.35.2",    
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ]
]

[tool.uv.sources]
torch = [
  # For developing on macos, need cpu torch
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
