[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nucleus"
version = "0.0.0"
description = ""
authors = [
    { name="Arthur Feeney", email="afeeney@uci.edu" },
    { name="Sheikh Md Shakeel Hassan", email="sheikhh1@uci.edu" },
    { name="Xianwei Zou", email="xianwz2@uci.edu" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4,<3",
    "h5py>=3.16.0,<4",
    "hydra-core>=1.3.2,<2",
    "lightning>=2.6.1,<3",
    "wandb>=0.25.1",
    "timm>=1.0.26,<2",
    "einops>=0.8.2",
    "opencv-python>=4.13.0.92,<5",
    "matplotlib>=3.10.8,<4",
    "lion-pytorch>=0.2.4",
    "rich>=14.3.3,<15",
    "scipy>=1.17.1,<2",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "joblib>=1.5.3,<2",
    "rotary-embedding-torch>=0.8.9",
    "imgcat>=0.6.0",
    "python-dotenv>=1.2.2,<2",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.11.0,<3",
    "natten>=0.21.6",
]
cu128 = [
    # fully pinned
    "torch==2.11.0,<3",
    "natten==0.21.6+torch2110cu128",
]
cu130 = [
    # try not to pin?
    "torch>=2.11.0,<3",
    "natten>=0.21.6",
]
poseidon = [
    # Poseidon relies on a swinv2 module that breaks with newer versions of Transformers.
    # This is the version that is listed in their pyproject.toml
    # https://github.com/camlab-ethz/poseidon/blob/b8fa28f59bd7f7673323f28d11a12c6f3a215c61/pyproject.toml
    "transformers==4.35.2",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu130" },
  ]
]

[tool.uv.sources]
torch = [
  # For developing on macos, need cpu torch
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
natten = [
  { index = "natten", extra = "cu128" },
  { index = "natten", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "natten"
url = "https://whl.natten.org"
explicit = true
format = "flat"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

